examples/test/testpolicy2158.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2158
  namespace: namespace479
spec:
  podSelector:
    matchLabels:
      key7: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value2
      podSelector:
        matchLabels:
          key13: value19
          key34: value39
          key4: value42
